Fix text align center

--- a/assets/css/mm_style.css
+++ b/assets/css/mm_style.css
@@ -53,7 +53,7 @@ body {
     font-family: 'uniFont', sans-serif;
     color: #ecf6fe;
     font-size: 2.5vw;
-    /* text-align: center; */
+    text-align: center;
     margin: 0 auto;
     padding-top: 0.5vw;
   
